# dispatch

./: .gitignore  CLAUDE.md  SPECS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: device_flow.rs  mod.rs  token.rs
src-tauri/src/collections/: io.rs  mod.rs  slugify.rs  types.rs
src-tauri/src/commands/: auth.rs  collections.rs  environments.rs  github.rs  http.rs  mod.rs  sync.rs  workspace.rs
src-tauri/src/environments/: io.rs  types.rs
src-tauri/src/github/: api.rs
src-tauri/src/http/: executor.rs
src-tauri/src/sync/: actor.rs  mod.rs  ops.rs  tests.rs  types.rs
src-tauri/src/workspace/: clone_ops.rs  mod.rs  registry.rs
src/api/: auth.ts  collections.ts  environments.ts  github.ts  http.ts  sync.ts  system.ts  workspace.ts
src/stores/: authStore.ts  collectionStore.ts  environmentStore.ts  requestStore.ts  syncStore.test.ts  syncStore.ts  uiStore.ts  workspaceStore.ts
src/types/: collections.ts  environments.ts
src/utils/: curl.test.ts  curl.ts  variables.test.ts  variables.ts
(+115 files in other folders)
